--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
-        "marketier-ui": "^0.1.5"
+        "marketier-ui": "^0.1.5",
+        "vue-i18n": "^9.1.10"
     }
 }
