--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     },
     "dependencies": {
         "dayjs": "^1.11.3",
+        "focus-trap": "^6.9.4",
+        "focus-trap-vue": "^3.3.0",
         "marketier-ui": "^0.1.5",
         "vue-i18n": "^9.1.10",
         "zxcvbn": "^4.4.2"
