--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/ssr.js": "/js/ssr.js"
+    "/js/app.js": "/js/app.js?id=cd9d45bb8c07e5155925a38d1bbcbfa9",
+    "/css/app.css": "/css/app.css?id=1eaf8cefa64215d4cf932e94afde1d2b"
 }
