--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=bdf95e1778530f71c29785bd5914d1b8",
-    "/css/app.css": "/css/app.css?id=1eaf8cefa64215d4cf932e94afde1d2b"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
