--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6027bbb7d8a7904ffb8646e49be87113",
+    "/css/app.css": "/css/app.css?id=1eaf8cefa64215d4cf932e94afde1d2b"
 }
