--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=4d2cd780d3d1738388564983ab95fcbf",
-    "/css/app.css": "/css/app.css?id=bf96c5864a28aa47ee77d7d5870f0a99"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
