--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=10f8f8102d4406ac426a43e4873f0ca9",
-    "/css/app.css": "/css/app.css?id=bf96c5864a28aa47ee77d7d5870f0a99"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
