--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0c5b9dc27b1eb292772c3fb971ba2da7",
+    "/css/app.css": "/css/app.css?id=bf96c5864a28aa47ee77d7d5870f0a99"
 }
