--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=d6ea01de8f0369d60e624173753bbddf",
-    "/css/app.css": "/css/app.css?id=f6ec533c4c31d63ee2e631e76c1527d6"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
