--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=4063d26bb407af6ba47012ce5ff9edde",
-    "/css/app.css": "/css/app.css?id=a01e518b691ff786401ae9f83fbb4612"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
