--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=cea7d8b4f0d9edcf6c0b7bd44509997b",
+    "/css/app.css": "/css/app.css?id=a01e518b691ff786401ae9f83fbb4612"
 }
