--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=bd69021bbbb85d2090ec12a7f137215c",
-    "/css/app.css": "/css/app.css?id=89280130a3a4163dfbbd076692c911e4"
+    "/js/ssr.js": "/js/ssr.js"
 }
