--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/ssr.js": "/js/ssr.js"
+    "/js/app.js": "/js/app.js?id=89e108585f48502f8d2f5f35da5cbfe2",
+    "/css/app.css": "/css/app.css?id=89280130a3a4163dfbbd076692c911e4"
 }
