--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
+        "@tiptap/extension-image": "^2.0.0-beta.202",
+        "@tiptap/extension-link": "^2.0.0-beta.202",
+        "@tiptap/starter-kit": "^2.0.0-beta.202",
+        "@tiptap/vue-3": "^2.0.0-beta.202",
         "dayjs": "^1.11.3",
         "focus-trap": "^6.9.4",
         "focus-trap-vue": "^3.3.0",
