--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
+        "@tiptap/extension-character-count": "^2.0.0-beta.202",
         "@tiptap/extension-image": "^2.0.0-beta.202",
         "@tiptap/extension-link": "^2.0.0-beta.202",
+        "@tiptap/extension-underline": "^2.0.0-beta.202",
         "@tiptap/starter-kit": "^2.0.0-beta.202",
         "@tiptap/vue-3": "^2.0.0-beta.202",
         "dayjs": "^1.11.3",
