--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     },
     "dependencies": {
         "@tiptap/extension-character-count": "^2.0.0-beta.202",
+        "@tiptap/extension-color": "^2.0.0-beta.209",
         "@tiptap/extension-image": "^2.0.0-beta.202",
         "@tiptap/extension-link": "^2.0.0-beta.202",
+        "@tiptap/extension-text-align": "^2.0.0-beta.209",
+        "@tiptap/extension-text-style": "^2.0.0-beta.209",
         "@tiptap/extension-underline": "^2.0.0-beta.202",
         "@tiptap/starter-kit": "^2.0.0-beta.202",
         "@tiptap/vue-3": "^2.0.0-beta.202",
