--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=4b493edfc2f212329996c4096e3a1e1a",
-    "/css/app.css": "/css/app.css?id=62146d4eb6f850c459ae0590817832de"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
