--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=e85a976d5e788135dae77d54721808cc",
-    "/css/app.css": "/css/app.css?id=cfe1a16979a9e3f6d542e2a18e85a6e5"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
