--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=669edb2d2b11a985676d55751d80f82b",
+    "/css/app.css": "/css/app.css?id=cfe1a16979a9e3f6d542e2a18e85a6e5"
 }
