--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=c0066f824bcaf96244a79d765414216f",
-    "/css/app.css": "/css/app.css?id=587932a771c3c395bee60a182c42f157"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
