--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=3c3b97df99c664cf8cab03f9dfb23247",
+    "/css/app.css": "/css/app.css?id=587932a771c3c395bee60a182c42f157"
 }
