--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=9ec8682a069ed1789bfc6e0ecd03e0d1",
-    "/css/app.css": "/css/app.css?id=7e293c979ec9e72bf75077c1ee2d874f"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
