--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=4968b30aaf7e46827be2134abc28e36a",
+    "/css/app.css": "/css/app.css?id=7e293c979ec9e72bf75077c1ee2d874f"
 }
