+ Post search (via fuzzysearch)

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
         "caneara/quest": "^2.0",
         "doctrine/dbal": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.5.4",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.8",
+        "laravel/scout": "^9.8",
         "laravel/tinker": "^2.7",
+        "meilisearch/meilisearch-php": "^0.27.0",
         "spatie/laravel-permission": "^5.5",
         "tightenco/ziggy": "^1.0"
     },
