--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
         "@tiptap/extension-text-align": "^2.0.0-beta.209",
         "@tiptap/extension-text-style": "^2.0.0-beta.209",
         "@tiptap/extension-underline": "^2.0.0-beta.202",
+        "@tiptap/prosemirror-tables": "^1.1.4",
         "@tiptap/starter-kit": "^2.0.0-beta.202",
         "@tiptap/vue-3": "^2.0.0-beta.202",
         "dayjs": "^1.11.3",
         "floating-vue": "^2.0.0-beta.20",
         "focus-trap": "^6.9.4",
         "focus-trap-vue": "^3.3.0",
+        "hotkeys-js": "^3.10.1",
         "marketier-ui": "^2.0.2",
         "pinia": "^2.0.29",
         "vue-i18n": "^9.1.10",
