--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=590d8f4defe6954e10f23ce098000ae8",
-    "/css/app.css": "/css/app.css?id=286fa66751c58cc59b38834e06313582"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
