--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=47d05872106588bd565cf917299bdb81",
+    "/css/app.css": "/css/app.css?id=7626b7cda05116e5f281ef4987c8ea71"
 }
