~ page editor hydration pt1

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=9dfe30df022621b0956b3e5126a72926",
-    "/css/app.css": "/css/app.css?id=7626b7cda05116e5f281ef4987c8ea71"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
