--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6c78842b9d071d5eb52496528f3d2acb",
+    "/css/app.css": "/css/app.css?id=7626b7cda05116e5f281ef4987c8ea71"
 }
