--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=60c1757f9c93c22e4a4e4861bac5ba20",
-    "/css/app.css": "/css/app.css?id=90c6c25daa5d9d5eefa68c84ed896fa3"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
