--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.7",
         "meilisearch/meilisearch-php": "^0.27.0",
         "spatie/laravel-permission": "^5.5",
+        "spatie/pdf-to-image": "^2.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
