--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b5aa67de0cb2df8dce3588553ded9697",
-    "/css/app.css": "/css/app.css?id=812443ce90dffd11e80273cc8733b3fa"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
