--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=824113c7e867ff2575345d40617ebd59",
-    "/css/app.css": "/css/app.css?id=812443ce90dffd11e80273cc8733b3fa"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
