--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "@tiptap/extension-character-count": "^2.0.0-beta.202",
+        "@tiptap/extension-code-block-lowlight": "^2.0.2",
         "@tiptap/extension-color": "^2.0.0-beta.209",
         "@tiptap/extension-image": "^2.0.0-beta.202",
         "@tiptap/extension-link": "^2.0.0-beta.202",
@@ -51,7 +52,9 @@
         "floating-vue": "^2.0.0-beta.20",
         "focus-trap": "^6.9.4",
         "focus-trap-vue": "^3.3.0",
+        "highlight.js": "^11.7.0",
         "hotkeys-js": "^3.10.1",
+        "lowlight": "^2.8.1",
         "marketier-ui": "^2.0.2",
         "monaco-editor": "^0.36.1",
         "monaco-editor-webpack-plugin": "^7.0.1",
