--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=c3eb5a86687bcb3136239c35c8d2013d",
-    "/css/app.css": "/css/app.css?id=8ea0e890e3a2dfec65df2f7de4873752"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
