--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a95c5b3805fca3a1ec9cb6bf6b4f5575",
+    "/css/app.css": "/css/app.css?id=8ea0e890e3a2dfec65df2f7de4873752"
 }
