--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=61c14f9da04b41fd1fedbda3b6f1adcf",
-    "/css/app.css": "/css/app.css?id=8ea0e890e3a2dfec65df2f7de4873752"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
