--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=efa5d944d37166b22faa54f1aefbabcb",
+    "/css/app.css": "/css/app.css?id=8ea0e890e3a2dfec65df2f7de4873752"
 }
