--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=275cd8120bf5985f505b7be0afd84693",
-    "/css/app.css": "/css/app.css?id=8ea0e890e3a2dfec65df2f7de4873752"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
