--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=bbc3086f57845afc768cc70ca4edecf0",
-    "/css/app.css": "/css/app.css?id=8650df23779853e58b3bd4f7510d9dc2"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
