~ post category permission update

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ad9f80136382d229861c367be83e9406",
-    "/css/app.css": "/css/app.css?id=914604b3cd59b6c4ff2e6b9977ddf09c"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
