--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=8630b6e2c8761709ad5e5241aa04232d",
+    "/css/app.css": "/css/app.css?id=c0c722826837b1be7bb3aa6b533ef3e8"
 }
