--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "monaco-editor-webpack-plugin": "^7.0.1",
         "pinia": "^2.0.29",
         "vue-i18n": "^9.1.10",
+        "vue3-smooth-dnd": "^0.0.5",
         "zxcvbn": "^4.4.2"
     }
 }
