--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=fa4a68143fbfdc0dec0d48d4454c0036",
-    "/css/app.css": "/css/app.css?id=c0c722826837b1be7bb3aa6b533ef3e8"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
