--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=617e7e7e939b40d9989c7a377ee4a288",
-    "/css/app.css": "/css/app.css?id=ab2ae2e35a61e05fc54e7ca3b1b7f89f"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
