--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=0dd3a74e78e6b9555c121b2c221fc1d4",
-    "/css/app.css": "/css/app.css?id=ab2ae2e35a61e05fc54e7ca3b1b7f89f"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
