--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=816ee0d1e74903e7d217ef9fa840a66c",
+    "/css/app.css": "/css/app.css?id=dcf5f014304759d274aea92243b38489"
 }
