--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=8ee330db928401d8d3f21908ef56708a",
+    "/css/app.css": "/css/app.css?id=c00776093c7fcbaaf5efe37999e57d0f"
 }
