more finalizing touches

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2f4420edec176f89db14dc91eadec0c4",
+    "/css/app.css": "/css/app.css?id=7652a99944612c6a240a9a752e83a900"
 }
