TextEditor: resizable tables

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=602c37689e522251972d2adc80b1ed6f",
-    "/css/app.css": "/css/app.css?id=7652a99944612c6a240a9a752e83a900"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
